correcting markdown for first task

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -287,7 +287,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -322,7 +324,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "We can note two things from the running of our function with different precision demands:\n",
