correcting based on new method

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -19,20 +19,28 @@
     "#### Task 1 - October 5th, 2020 \n",
     "Write a Python function called sqrt2 that calculates and prints to the screen the square root of 2 to 100 decimal places. Your code should not depend on any module from the standard library or otherwise. You should research the task first and include references and a description of your algorithm.\n",
     "#### Research\n",
-    "Newton's method [1] can be used to iteratively approach closer toware the square root of a number. According to Newton's method, one can approach further toward the square root of a number, x, from an initial guess of the square root, z, as follows:\n",
+    "Newton's method [1] can be used to calculate the square root of a number by first taking a guess and then iteratively moving closer toward the actual square root. According to Newton's method, one can approach further toward the square root of a number, x, from an initial guess of the square root, z, as follows:\n",
     "\n",
     "$$ z_{next} = z - \\frac{z^2-x}{2z} $$\n",
     "\n",
-    "There are two impediments to achieving a precision to 100 decimal places without using any Python modules, however:\n",
-    "1. Decimal point numbers do not have exact representations in binary floating point, i.e. in Python's float datatype, which is the only datatype available for displaying decimal numbers in Python without the use of modules such as Decimal [2]. This means that we will not likely be able to achieve the accuracy required to display the square root of two to 100 decimal places, as in order to do so we would have to perform many very precise calculations involving floating point numbers, which are by definition imprecise.\n",
-    "2. Calculating to 100 decimal places is computationally expensive and is not feasible on standard laptops with limited RAM and CPU cores.\n",
+    "Newton's method is of course straightforward to program in Python - one uses Python's operators (-, * and /) to perform each instance of the calculation, and then one instructs the program to keep performing the calculation, using the output of the previous instance as the input to the next, until the square of the output is however close to the number that one is trying to get the square root of (one could say to within 0.001, for example). One would then specify to how many decimal places one would like one's calculated root to have, in this instance, 100.\n",
+    "\n",
+    "However, there are two impediments to calculating the square root of 2 to a precision to 100 decimal places without using any Python modules, as anyone who tries will quickly find out:\n",
+    "1. Decimal point numbers do not have exact representations in binary floating point, which is essentially what Python's float datatype is, and which is the only datatype available for displaying decimal numbers in Python without the use of modules such as Decimal [2]. This means that we will not likely be able to achieve the accuracy required to display the square root of two to 100 decimal places with precision, i.e. exactly, as in order to do so we would have to perform many very precise calculations involving floating point numbers, which are themselves by definition not exact, i.e. imprecise.\n",
+    "2. Python is simply not able to store 100 decimal places in a floating point number\n",
+    "\n",
+    "It is important to note, however, that the problem is not with the Python operators (-, * and /) or loops, but only the float datatype itself. This means that if we could somehow use the other numerical datatype that does not need to be imported in Python, i.e. the integer, to perform the calculation, we should not have a problem - except, that is, for the fact that the integer datatype by does not cater to decimal places.\n",
+    "\n",
+    "The trick, then, is to forget about decimal places during the calculation itself, and then insert the decimal place afterwards using the string datatype. What if, instead of calculating the square root of two, we calculated the first hundred digits of the square root of: $$2\\times10^{100000000}$$\n",
+    "\n",
+    "Looking at the two numbers as strings, the only difference would be that one has a '.' and the other does not; and because integers have exact representations in Python's integer datatype, we should not come across any imprecision as we would have using the float datatype.\n",
     "\n",
     "What will thus been shown as part of my solution is as follows:\n",
-    "1. Python's Math module's sqrt function is not accurate to the 100th decimal place (we will use NASA calculation of the root of 2 to ~ million decimal places as our comparison [3]), nor is it able to provide a 100 decimal places. From this we can infer that the inaccuracy resides in teh datatype used by this function, namely, the float.\n",
+    "1. Python's Math module's sqrt function is not accurate to the 100th decimal place (we will use NASA's calculation of the root of 2 to ~ million decimal places as our comparison [3]), nor is it able to even provide 100 decimal places. From this we can infer that the inaccuracy resides in thh datatype used by this function, namely, the float.\n",
     "2. Python's Decimal module's sqrt function is accurate to 100 decimal places, again indicating that Python's float datatype is what is at issue above.\n",
-    "3. The computational expense of calculating a square root using only in-built functions (i.e. no imported functions) increases significantly when the difference between the actual root squared and the calculated root squared is less than .0001.\n",
+    "3. Python's float datatype cannot calculate the square root of two such that the difference between the actual root squared and the calculated root squared is less than .0001.\n",
+    "4. The square root of two can be calculated by using the integer datatype to calculate the square root of *2\\*10^100000000* and then converting it to a string, slicing to retain only the first 100 characters, and then dutifully inserting the decimal point.\n",
     "\n",
-    "The conclusion from this is that to calculate the square root of 2 in Python one must import a module, e.g. the Decimal module.\n",
     "\n",
     "[1] https://mathworld.wolfram.com/NewtonsMethod.html\n",
     "\n",
@@ -193,8 +201,10 @@
     "# we decide on the precision outside of the function itself\n",
     "# as the requirements of the question do not indicate\n",
     "# that precision should be inputted as a parameter to the function\n",
-    "precision = 0.01\n",
     "def squareRootOfTwo():\n",
+    "    # store 2 in a variable so that we are not\n",
+    "    number = 2\n",
+    "    # hardcoding values\n",
     "    # have the function take a guess\n",
     "    guess = 1.5\n",
     "    # while the guess is not of a sufficient accuracy,\n",
@@ -202,9 +212,9 @@
     "    # To check the accuracy of the guess, square it and\n",
     "    # check if the absolute difference between the result \n",
     "    # and the input is less than the desired precision.\n",
-    "    while abs(guess ** 2 - 2) > precision:\n",
+    "    while abs(guess ** 2 - number) > precision:\n",
     "        # if greater than the precision, apply Newton's alogrithm\n",
-    "        guess = guess - ((guess ** 2 - 2) / 2 * guess)\n",
+    "        guess = guess - ((guess ** 2 - number) / 2 * guess)\n",
     "        # once the guess is sufficiently accurate the while\n",
     "        # loop ends. Now round the result to your liking\n",
     "    print(\"%.100f\" % guess)\n",
@@ -230,6 +240,7 @@
     "# Now we will test Newton's method for calculating\n",
     "# the square of two, and time the calculation\n",
     "import time\n",
+    "precision = 0.01\n",
     "start = time.time()\n",
     "answer = squareRootOfTwo()\n",
     "end = time.time()\n",
@@ -257,13 +268,13 @@
      "output_type": "stream",
      "text": [
       "1.4145670714723390659628421417437493801116943359375000000000000000000000000000000000000000000000000000\n",
-      "1.1 seconds taken\n",
+      "1.0 seconds taken\n",
       "Running our function so that the square of the calculated square root of two is between 1.99 and 2.01 provides an approximation of the square root of two to the 51th place.\n"
      ]
     }
    ],
    "source": [
-    "# Same again but to a precision of 0.00001\n",
+    "# Same again but to a precision of 0.001\n",
     "# note the increase from 89.6 seconds to seconds\n",
     "import time\n",
     "precision = 0.001\n",
@@ -296,13 +307,13 @@
      "output_type": "stream",
      "text": [
       "1.4142489172699921340381479240022599697113037109375000000000000000000000000000000000000000000000000000\n",
-      "104.6 seconds taken\n",
+      "90.0 seconds taken\n",
       "Running our function so that the square of the calculated square root of two is between 1.999 and 2.001 provides an approximation of the square root of two to the 51th place.\n"
      ]
     }
    ],
    "source": [
-    "# Same again but to a precision of 0.00001\n",
+    "# Same again but to a precision of 0.0001\n",
     "# note the increase from 89.6 seconds to seconds\n",
     "import time\n",
     "precision = 0.0001\n",
@@ -329,9 +340,77 @@
    "source": [
     "We can note two things from the running of our function with different precision demands:\n",
     "1. The number of decimal places remains the same (51) despite varying precision demands, indicating that there is a limit to the number of decimal places that a float is capable of storing.\n",
-    "2. The computational expense of calculating the square root of two increases exponentially with respect to an increased demand for precision (from 0.0 seconds at 0.1 precision to 1.1 seconds at 0.001 precision to approximately 100 seconds at 0.0001 precision).\n",
+    "2. The computational expense of calculating the square root of two increases very quickly with respect to an increased demand for precision (from 0.0 seconds at 0.1 precision to 1.1 seconds at 0.001 precision to approximately 100 seconds at 0.0001 precision). If one tries to attain an even greater precision, one will see that the function simply times out, i.e. the precision cannot be attained by Python's float datatype.\n",
     "\n",
-    "*The conclusion from this is thus that it is neither computationally feasibly for a typical laptop, nor possible due to the nature of Python's float datatype, to calculate the square root of 2 to 100 decimal places without importing any modules.*"
+    "*The conclusion from this is thus that it is not possible to use the float datatype to calculate the square root of 2 to 100 decimal places."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rewrite our function so that it calculates the square root\n",
+    "# of 2*10**100000000, and then manipulate this using\n",
+    "# string operations into the square root of two\n",
+    "def squareRootOfTwo():\n",
+    "    number = 2*10**200\n",
+    "    # have the function take a guess\n",
+    "    guess = number // 2\n",
+    "    # while the guess is not of a sufficient accuracy,\n",
+    "    # apply Newton's algorithm to improve it.\n",
+    "    # This time, because we are dealing with very large\n",
+    "    # numbers, it is not practical to check that the answer\n",
+    "    # is precise. Instead, we will assume that after 1000\n",
+    "    # iterations it is as precise as we need.\n",
+    "    for i in range(1000):\n",
+    "        # if greater than the precision, apply Newton's alogrithm\n",
+    "        guess = guess - ((guess ** 2 - number) // (2 * guess))\n",
+    "        # once the guess is sufficiently accurate the while\n",
+    "        # loop ends. Now round the result to your liking\n",
+    "    return guess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.414213562373095048801688724209698078569671875376948073176679737990732478462107038850387534327641572\n",
+      "1.414213562373095048801688724209698078569671875376948073176679737990732478462107038850387534327641572\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "precision = 10**100\n",
+    "start = time.time()\n",
+    "answer = squareRootOfTwo()\n",
+    "end = time.time()\n",
+    "# we only want the first 100 characters\n",
+    "answer = list((str(answer)[:100]))\n",
+    "finalanswer = []\n",
+    "# the first character will be the same as answer\n",
+    "finalanswer.append(answer[0])\n",
+    "# the second will be a decimal point\n",
+    "finalanswer.append(\".\")\n",
+    "# now add the rest of the characters\n",
+    "for i in range(1, len(answer)):\n",
+    "    finalanswer.append(answer[i])\n",
+    "# print our final answer\n",
+    "print(\"\".join(finalanswer))\n",
+    "# print NASA's calculation\n",
+    "print(nasa[:101])\n",
+    "# check if they are the same\n",
+    "print(\"\".join(finalanswer) == nasa[:101])\n"
    ]
   },
   {
