--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "The trick, then, is to forget about decimal places during the calculation itself, and then insert the decimal place afterwards using the string datatype. What if, instead of calculating the square root of two, we calculated the first hundred digits of the square root of: $$2\\times10^{100000000}$$\n",
     "\n",
-    "Looking at the two numbers as strings, the only difference would be that one has a '.' and the other does not; and because integers have exact representations in Python's integer datatype, we should not come across any imprecision as we would have using the float datatype.\n",
+    "Looking at the two numbers as strings, the only difference would be that one has a '.' and the other does not; and because integers have exact representations in Python's integer datatype, we should not come across any imprecision as we would have using the float datatype. Credit to here [4] for this solution.\n",
     "\n",
     "What will thus been shown as part of my solution is as follows:\n",
     "1. Python's Math module's sqrt function is not accurate to the 100th decimal place (we will use NASA's calculation of the root of 2 to ~ million decimal places as our comparison [3]), nor is it able to even provide 100 decimal places. From this we can infer that the inaccuracy resides in thh datatype used by this function, namely, the float.\n",
@@ -46,7 +46,9 @@
     "\n",
     "[2] https://docs.python.org/2/library/decimal.html\n",
     "\n",
-    "[3] https://stackoverflow.com/questions/22162522/how-to-display-a-decimal-number-to-100-decimal-places"
+    "[3] https://stackoverflow.com/questions/22162522/how-to-display-a-decimal-number-to-100-decimal-places\n",
+    "\n",
+    "[4] https://stackoverflow.com/questions/64295245/how-to-get-the-square-root-of-a-number-to-100-decimal-places-without-using-any-l"
    ]
   },
   {
@@ -411,6 +413,130 @@
     "print(nasa[:101])\n",
     "# check if they are the same\n",
     "print(\"\".join(finalanswer) == nasa[:101])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task 2 November 2nd, 2020: \n",
+    "The Chi-squared test for independence is a statistical\n",
+    "hypothesis test like a t-test. It is used to analyse whether two categorical variables\n",
+    "are independent. The Wikipedia article gives the table below as an example [4],\n",
+    "stating the Chi-squared value based on it is approximately 24.6. Use scipy.stats\n",
+    "to verify this value and calculate the associated p value. You should include a short\n",
+    "note with references justifying your analysis in a markdown cell.\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td><td>\n",
+    "        <td>A<td>\n",
+    "        <td>B<td>\n",
+    "        <td>C<td>\n",
+    "        <td>D<td>\n",
+    "        <td>Total<td>\n",
+    "    <tr>\n",
+    "    <tr>\n",
+    "        <td>White Collar<td>\n",
+    "        <td>90<td>\n",
+    "        <td>60<td>\n",
+    "        <td>104<td>\n",
+    "        <td>95<td>\n",
+    "        <td>349<td>\n",
+    "    <tr>\n",
+    "    <tr>\n",
+    "        <td>Blue Collar<td>\n",
+    "        <td>30<td>\n",
+    "        <td>50<td>\n",
+    "        <td>51<td>\n",
+    "        <td>20<td>\n",
+    "        <td>151<td>\n",
+    "    <tr>\n",
+    "    <tr>\n",
+    "        <td>No Collar<td>\n",
+    "        <td>30<td>\n",
+    "        <td>40<td>\n",
+    "        <td>45<td>\n",
+    "        <td>35<td>\n",
+    "        <td>150<td>\n",
+    "    <tr>\n",
+    "    <tr>\n",
+    "        <td>Total<td>\n",
+    "        <td>150<td>\n",
+    "        <td>150<td>\n",
+    "        <td>200<td>\n",
+    "        <td>150<td>\n",
+    "        <td>650<td>\n",
+    "    <tr>\n",
+    "<table>\n",
+    "    \n",
+    "\n",
+    "<br>\n",
+    "I will first simply use scipy.stats to find the chi-squared value and the corresponding p-value for this sample. One can achieve that without actually understanding how the chi-squared value is actually calculated.the chi2_contingency function can achieve this for us - it's only mandatory parameter is the array of frequencies for each category."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chi^2 = 24.5712028585826\n",
+      "p-value = 0.0004098425861096696\n",
+      "As the p-value is less than 0.05, the null hypothesis, that the categories are independent, can be assumed to be false.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import scipy.stats as ss\n",
+    "\n",
+    "data = np.array([[90, 60, 104, 95],[30, 50, 51, 20],[30, 40, 45, 35]])\n",
+    "\n",
+    "chi2, p, dof, expected = ss.chi2_contingency(data)\n",
+    "\n",
+    "print(f\"chi^2 = {chi2}\")\n",
+    "print(f\"p-value = {p}\")\n",
+    "if p < 0.05:\n",
+    "    print(\"As the p-value is less than 0.05, the null hypothesis, that the categories are independent, can be assumed to be false.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As regards understanding what the chi-squared test achieves, its meaning is actually quite intuitive. This is in contrast to the chi-squared distribution, whose probability density function is certainly intimidating to look at, and mathematically depends on the gamma function - and many say that to understand the gamma function one must first understand the exponential and the poisson functions... Wikipedia's definition of the test is lucid:\n",
+    "\n",
+    "> The chi-squared test is a statistical test applied to sets of categorical data to evaluate how likely it is that any observed difference between the sets arose by chance [...] It tests a null hypothesis stating that the frequency distribution of certain events observed in a sample is consistent with a particular theoretical distribution. The events considered must be mutually exclusive and have total probability [1].\n",
+    "\n",
+    "For example, when we flip a coin, the result is either heads or tails, not both - this covers mutual exclusivity. The result also *must* be either heads or tails, meaning that the probability of heads coming up and that of tails coming up equals 1. Of course, we know that a standard coin has a .5 chance of turning up heads, and .5 chance of turning up tails. Thus, if we flip a coin 100 times, and we get 65 heads and 35 tails, we could use the chi-squared test to evaluate whether the disparity between this and the expected 50/50 outcome should be put down to chance or not. Basically, the chi-squared test may inform us that the disparity would highly unlikely to be down to chance, and it may be that the coin is not evenly weighted, for example.\n",
+    "\n",
+    "The chi-squares test operates then by calculating the chi-squared value of a sample, or number of samples. To get this value, we must first calculate a value that represents the variance between the expected frequency of a category in question with the actual frequency observed in the sample. The formula for this is:\n",
+    "$$\\frac{(expected value - actual value)^2}{expected value}$$\n",
+    "\n",
+    "This formula is very similar to that for standard deviation, as we would expect, because we are here calculating a kind of variance between the expected and actual frequencies in the sample. To obtain the chi-squared value, we then just sum the 'variance' of each category in each sample:\n",
+    "\n",
+    "$${\\displaystyle \\chi ^{2}=\\sum _{i=1}^{n}{\\frac {(O_{i}-E_{i})^{2}}{E_{i}}}}$$\n",
+    "\n",
+    "\n",
+    "There are two further things that are important to grasp when understanding how we evaluate the chi-squared value to actually carry out the chi-squared test.\n",
+    "1. The higher the chi-squared value, the higher the 'variance' between the expected and actual frequencies for the categories, and thus the higher likelihood that the null hypothesis is false.\n",
+    "1. Because the chi-squared value is the sum of the 'variances' for each category and sample, more categories and samples will lead to a higher chi-squared value.\n",
+    "\n",
+    "When one considers both of the above, it is clear that one must evaluate the chi-squared value differently for different numbers of categories and samples. Thus, while the chi-squared value represents our test-statistic, to obtain the more meaningful 'p-value', we must factor in what are know as the 'degrees of freedom,' which can be calculated from the number of categories and samples. If one looks at the table above, one can see that apart form the first and last rows and columns, each row represents a category, and each column a sample. Basically, the degrees of freedom is the number of pieces of data that we need in order to calculate our test-statistic, here the chi-squared value. In this case, we need $(rows - 1)(columns - 1)$ pieces of data, because (assuming we know the total number of datapoints for each category and the total number of datapoints in each sample, which is a safe assumption) we can calculate the frequency of any one category in any one sample by either subtracting the frequencies of the other categories from the total in that sample, or subtracting the frequencies of the category in the other samples from the total datapoints for that category. Thus, for our coin example, the degrees of freedom would be $(2-1)(2-1) = 2$. \n",
+    "\n",
+    "Once we are equipped with the chi-squared value and the degrees of freedom, we are then able to plot the probability density function for a chi-squared-distribution with those degrees of freedom. Then, we calculate the area under the function and to the left of the calculated chi-squared value (represented by the x-axis), and if that area is less than 0.95, we can reject the null hypothesis (or accept if greater). This is essentially how the p-value of the test is calculated: $1 - area = Pvalue$.\n",
+    "\n",
+    "Once the purpose and meaning of the chi-squared test is understood, the actual chi-squared distribution becomes much more manageable. In particular, the manner in which the pdf changes with changing degrees of freedom becomes actually intuitively understandable, as the chi-squared value has been shown above to increase with increasing degrees of freedom.\n",
+    "\n",
+    "\n",
+    "References\n",
+    "[1] https://en.wikipedia.org/wiki/Pearson%27s_chi-squared_test\n",
+    "\n",
+    "[2] https://python-bloggers.com/2020/09/how-to-run-chi-square-test-in-python/"
    ]
   },
   {
