starting third task

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -540,13 +540,119 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task 3 November 16th, 2020\n",
+    "The standard deviation of an array of numbers x is\n",
+    "calculated using numpy as np.sqrt(np.sum((x - np.mean(x))**2)/len(x)) .\n",
+    "However, Microsoft Excel has two different versions of the standard deviation calculation, STDDEV.P and STDDEV.S . The STDDEV.P function performs the above\n",
+    "calculation but in the STDDEV.S calculation the division is by len(x)-1 rather\n",
+    "than len(x) . Research these Excel functions, writing a note in a Markdown cell\n",
+    "about the difference between them. Then use numpy to perform a simulation\n",
+    "demonstrating that the STDDEV.S calculation is a better estimate for the standard deviation of a population when performed on a sample. Note that part of\n",
+    "this task is to figure out the terminology in the previous sentence.\n",
+    "\n",
+    "#### Research\n",
+    "Like many statistical phenomena, there is both a mathematical and intuitive explanation of why when calculating the standard deviation of a sample we divide the sum of the squared distances of each point from the sample mean (i.e the variance) from the size of the sample minus one rather than simply the size of the sample. I will here eschew the mathematical explanation in favour of the intuitive. I have taken this intuitive explanation mostly from this video [1].\n",
+    "\n",
+    "Firstly, one must understand the difference between a population and its sample:\n",
+    "\n",
+    "* A population is a complete set of data.\n",
+    "* A sample is a sample from a population, and thus is an incomplete set of data.\n",
+    "\n",
+    "Secondly, one must understand how variance is calculated:\n",
+    "* Variance is a measure of the spread of a dataset, and is measured as a sum of each the datapoint's distances from the mean squared.\n",
+    "* The distances are squared for two reasons: (1) to avoid a situation where the negative and positive distances from the mean would simply cancel each other and the variance would be zero - by squaring the distances from the mean the result will always be positive and there will be no cancellingo out; (2) to align with what are called the statistical moments of a distribution, which is a topic for another day.\n",
+    "* If you still think that squaring the distances seems somewhat artificial, then you are correct to the extent that variance in itself is not a very meaningful value. It is only when one reduces it by dividing by a certain factor and then getting the square root of the result (thereby to a certain extent undoing the previous squaring of the distances) that one arrives at an intrinsically meaningful value - the standard deviation, which represents how much individual values tend to deviate from the mean.\n",
+    "\n",
+    "With an understanding of the difference between a population and a sample, and how variance is calculated, understanding \n",
+    "Because a sample is an incomplete version of a population, statistical phenomena that are derived from the entirety of a dataset's data points, such as the mean, are likely to be different in the population and the sample because there are data points in the population that are missing in the sample. As suggested above, when calculating the variance of a sample/population, we first need to calculate the sample/population mean. This is simply because the mean is involved in the calculation of variance, as variance is a measure of the data points' distance from the mean. Now this the key thing to understand: if one calculates the mean of a sample and then calculates the variance, *and if one then artifically changes the mean in anyway without changing the datapoints and then recalculates the variance using that artificial mean, this new variance will always be greater than the originally calculated variance.* This because the mean is calculated in such a way that it minimizes the total distance of data points from itself and is as much as possible equidistant from all the datapoints (it is a kind of middle value).\n",
+    "\n",
+    "As we said above, the population mean is almost always different from the sample mean. This means that the sample variance from the population mean will always be greater than the sample variance from the sample mean. To counteract this bias in the sample variance, we  decrease the value of the denominator when calculating the standard deviation so that its value larger than it would have been had we not decreased it. Thus, instead of dividing by n, we divide be n - 1. But why n - 1?\n",
+    "\n",
+    "The reason for the choice of -1 is somewhat less intuitive, although related to the foregoing. It involves what are called degrees of freedom. The degrees of freedom represents the number of data points that are 'free to move', or are independent.\n",
+    "\n",
+    "Take a univariate dataset, i.e. where there is one variable, of which we know the mean. In a sample from the population, each new datapoint, i.e. each value that the variable takes on, is independent of the population value. This is because the population cannot be in any way used to calculate the values in the sample (it might suggest ranges for values, but not actually values themselves.). This means that the degrees of freedom of a population is always the size of the population, n. If we take the *sample* mean, however, the situation is different. Here, in a sense there is no longer a one-way relationship where the mean is derived from the values but not the other way around. This is because if we know all but one of the values in the sample as well as the sample mean, then we also can *derive* the remaining value. This means that the remaining value is actually not independent - it is not 'free.' As such, the degrees of freedom of the sample is the size of the sample minus one, n - 1. When we calculate standard deviation, we divide not by the size of the dataset but by the degrees of freedom. In the case of populations, this just happens to equal the size of the dataset. It is also worth mentioning that the same coincidence happens when first calculating the sample mean. Because at that point we do not know the mean, then every value is free and cannot be derived from any other value available to us - hence the degrees of freedom in that case is equal also the sample size.\n",
+    "\n",
+    "To demonstrate that dividing by the degrees of freedom provides a more accurate standard deviation value than dividing by the size of the sample, I will do the following:\n",
+    "\n",
+    "1. Simulate a normally distribute dataset using numpy.random's normal() function, which takes in the standard deviation as a parameter.\n",
+    "1. Manually calculate the standard deviation of the population according to both the population and sample formulas. The population formula should be closer to the inputted standard deviation.\n",
+    "\n",
+    "[1] https://www.youtube.com/watch?v=wpY9o_OyxoQ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Actual standard deviation is 70\n",
+      "Standard deviation calculated using the population formula is: 69.75789029982327\n",
+      "Standard deviation calculated using the sample formula is: 69.7507222835877\n",
+      "When calculating the standard deviation of a population, the population formula produced the most accurate result\n",
+      "\n",
+      "Taking a sample of size 316 from the population, the results are as follows:\n",
+      "\n",
+      "Standard deviation calculated using the population formula is: 62.17862208428696\n",
+      "Standard deviation calculated using the sample formula is: 62.17058021524793\n",
+      "When calculating the standard deviation of a sample, the population formula produced the result closest to the standard deviation of the population.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import math\n",
+    "rng = np.random.default_rng()\n",
+    "\n",
+    "mu, sigma, n = 100, 70, 100000 # mean, standard deviation and size\n",
+    "norm = rng.normal(mu, sigma, n)\n",
+    "print(f'Actual standard deviation is {sigma}')\n",
+    "\n",
+    "popstd = np.sqrt((sum(abs(norm - mu)**2))/n)\n",
+    "print(f'Standard deviation calculated using the population formula is: {popstd}')\n",
+    "\n",
+    "sampstd = np.sqrt((sum(abs(norm - mu)**2))/n-1)\n",
+    "print(f'Standard deviation calculated using the sample formula is: {sampstd}')\n",
+    "\n",
+    "if abs(sigma - popstd) < abs(sigma - sampstd):\n",
+    "    print('When calculating the standard deviation of a population, the population formula produced the most accurate result\\n')\n",
+    "else:\n",
+    "    print('When calculating the standard deviation of a population, the sample formula produced the most accurate result\\n')\n",
+    "    \n",
+    "n = int(n/math.sqrt(n))\n",
+    "print(f'Taking a sample of size {n} from the population, the results are as follows:\\n')\n",
+    "norm = np.random.choice(norm, size=n)\n",
+    "popstd = np.sqrt(np.sum((norm - np.mean(norm))**2)/len(norm))\n",
+    "print(f'Standard deviation calculated using the population formula is: {popstd}')\n",
+    "\n",
+    "sampstd = np.sqrt(np.sum((norm - np.mean(norm))**2)/len(norm)-1)\n",
+    "print(f'Standard deviation calculated using the sample formula is: {sampstd}')\n",
+    "\n",
+    "if abs(sigma - popstd) < abs(sigma - sampstd):\n",
+    "    print('When calculating the standard deviation of a sample, the population formula produced the result closest to the standard deviation of the population.')\n",
+    "else:\n",
+    "    print('When calculating the standard deviation of a sample, the sample formula produced the result closest to the standard deviation of the population')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "https://www.youtube.com/watch?v=wpY9o_OyxoQ"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
